<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CustomCalendarView">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/month_height"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/prev"
            android:layout_width="@dimen/button_width"
            android:layout_height="match_parent"
            android:layout_weight="@dimen/month_button_weight"
            android:background="@drawable/main_color"
            android:src="@drawable/prev"/>
        <TextView
            android:id="@+id/year_month"
            android:layout_width="@dimen/month_width"
            android:layout_height="match_parent"
            android:layout_weight="@dimen/month_weight"
            android:gravity="center_vertical|center"
            android:background="@drawable/main_color"
            android:textSize="@dimen/month_font_size"
            android:textColor="@android:color/white"/>
        <ImageButton
            android:id="@+id/next"
            android:layout_width="@dimen/button_width"
            android:layout_height="match_parent"
            android:layout_weight="@dimen/month_button_weight"
            android:background="@drawable/main_color"
            android:src="@drawable/next"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="@dimen/days_width"
            android:layout_height="@dimen/days_height"
            android:layout_weight="@dimen/days_weight"
            android:gravity="center_vertical|center"
            android:background="@drawable/main_color"
            android:textSize="@dimen/days_font_size"
            android:textColor="@android:color/white"
            android:text="@string/days_sun"/>
        <TextView
            android:layout_width="@dimen/days_width"
            android:layout_height="@dimen/days_height"
            android:layout_weight="@dimen/days_weight"
            android:gravity="center_vertical|center"
            android:background="@drawable/main_color"
            android:textSize="@dimen/days_font_size"
            android:textColor="@android:color/white"
            android:text="@string/days_mon"/>
        <TextView
            android:layout_width="@dimen/days_width"
            android:layout_height="@dimen/days_height"
            android:layout_weight="@dimen/days_weight"
            android:gravity="center_vertical|center"
            android:background="@drawable/main_color"
            android:textSize="@dimen/days_font_size"
            android:textColor="@android:color/white"
            android:text="@string/days_tue"/>
        <TextView
            android:layout_width="@dimen/days_width"
            android:layout_height="@dimen/days_height"
            android:layout_weight="@dimen/days_weight"
            android:gravity="center_vertical|center"
            android:background="@drawable/main_color"
            android:textSize="@dimen/days_font_size"
            android:textColor="@android:color/white"
            android:text="@string/days_wed"/>
        <TextView
            android:layout_width="@dimen/days_width"
            android:layout_height="@dimen/days_height"
            android:layout_weight="@dimen/days_weight"
            android:gravity="center_vertical|center"
            android:background="@drawable/main_color"
            android:textSize="@dimen/days_font_size"
            android:textColor="@android:color/white"
            android:text="@string/days_thu"/>
        <TextView
            android:layout_width="@dimen/days_width"
            android:layout_height="@dimen/days_height"
            android:layout_weight="@dimen/days_weight"
            android:gravity="center_vertical|center"
            android:background="@drawable/main_color"
            android:textSize="@dimen/days_font_size"
            android:textColor="@android:color/white"
            android:text="@string/days_fri"/>
        <TextView
            android:layout_width="@dimen/days_width"
            android:layout_height="@dimen/days_height"
            android:layout_weight="@dimen/days_weight"
            android:gravity="center_vertical|center"
            android:background="@drawable/main_color"
            android:textSize="@dimen/days_font_size"
            android:textColor="@android:color/white"
            android:text="@string/days_sat"/>
    </LinearLayout>
    <com.podobong.calendar.views.CalendarViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>